CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(libLBFing)

SET(CMAKE_BUILE_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -Wall -Werror -g -std=c++11")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(
	"/usr/include/mysql"
	"/usr/local/include/hiredis"
	)

AUX_SOURCE_DIRECTORY(. LIBSRC)
ADD_LIBRARY(LBFing ${LIBSRC})

