CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(libLBFing)

SET(CMAKE_BUILD_TYPE Debug CACHE STRING "set build type to debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -Wall -Werror -g -std=c++11")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -Wall -Werror -std=c++11")



SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(
	"/usr/include/mysql"
	"/usr/local/include/hiredis"
	)

AUX_SOURCE_DIRECTORY(. LIBSRC)
ADD_LIBRARY(LBFing ${LIBSRC})

